--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.4</version>
-    </parent>
-    <groupId>ru.sbrf.OneKIB</groupId>
-    <artifactId>onekib-api</artifactId>
+    <groupId>ru.project.training</groupId>
+    <artifactId>springboot</artifactId>
     <version>ui-back-0.4.0</version>
-    <name>onekib-api</name>
+    <name>springboot</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -131,6 +126,13 @@
             <version>12.2.0.1</version>
         </dependency>
 
+        <!--spring security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.1.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -151,7 +153,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <apiDocsUrl>http://localhost:8080/stb_back/v3/api-docs</apiDocsUrl>
+                    <apiDocsUrl>http://localhost:8080/springboot/v3/api-docs</apiDocsUrl>
                     <outputFileName>openapi.yml</outputFileName>
                     <outputDir>${project.build.directory}</outputDir>
                 </configuration>
