--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,7 @@
 
     <groupId>ru.project.training</groupId>
     <artifactId>springboot</artifactId>
-    <version>ui-back-0.4.0</version>
-    <name>springboot</name>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -120,11 +119,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.4.4</version>
         </dependency>
-        <dependency>
+
+        <!-- no compiling-->
+        <!--dependency>
             <groupId>com.oracle.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
             <version>12.2.0.1</version>
-        </dependency>
+        </dependency-->
 
         <!--spring security-->
         <dependency>
