--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--without it Process finished with exit code 130 (interrupted by signal 2: SIGINT)-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.4.4</version>
         </dependency>
-        <!--dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>2.4.4</version>
@@ -43,7 +44,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
             <version>2.4.4</version>
-        </dependency-->
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <!--fixes context.setApplicationStartup-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.7</version>
+        </dependency>
 
         <!--breaks-->
         <!--dependency>
@@ -102,11 +111,12 @@
             <artifactId>log4j-web</artifactId>
             <version>2.14.0</version>
         </dependency-->
-        <dependency><!--io.swagger.v3.oas-->
+        <!--it is needed for springboot-->
+        <!--dependency><-io.swagger.v3.oas->
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.5.0</version>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -114,11 +124,11 @@
         </dependency>
 
         <!--activate jpa repositories-->
-        <dependency>
+        <!--dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.4.4</version>
-        </dependency>
+        </dependency-->
 
         <!-- no compiling-->
         <!--dependency>
@@ -128,11 +138,11 @@
         </dependency-->
 
         <!--spring security-->
-        <dependency>
+        <!--dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>5.1.1.RELEASE</version>
-        </dependency>
+        </dependency-->
 
     </dependencies>
     <build>
