--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,12 @@
-#server:
-#  servlet:
-#    context-path: /springboot_app
-#  error:
-#    whitelabel:
-#      enabled: true
-#  port: 8787
-#spring:
-#  thymeleaf:
-#    enabled: true
-#  main:
-#    lazy-initialization: true
+server:
+  servlet:
+    context-path: /springboot_app
+  error:
+    whitelabel:
+      enabled: true
+  port: 8787
+spring:
+  thymeleaf:
+    enabled: true
+  main:
+    lazy-initialization: true
