--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,17 @@ There was an unexpected error (type=Not Found, status=404).-->
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.4.4</version>
         </dependency>
+        <!--activate jpa repositories-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
         <!--dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -123,14 +134,6 @@ There was an unexpected error (type=Not Found, status=404).-->
             <artifactId>log4j-web</artifactId>
             <version>2.14.0</version>
         </dependency-->
-
-        <!--activate jpa repositories-->
-        <!--dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>2.4.4</version>
-        </dependency-->
-
         <!-- no compiling-->
         <!--dependency>
             <groupId>com.oracle.jdbc</groupId>
